[gd_scene load_steps=39 format=3 uid="uid://c04vtr65erpfu"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_o5ldr"]
[ext_resource type="Texture2D" uid="uid://kd6bkiwxiixv" path="res://dash-0002.png" id="2_vj5d7"]
[ext_resource type="Texture2D" uid="uid://b4ovc783j7ggq" path="res://Sprite-idle-Sheet (1).png" id="2_wswbc"]
[ext_resource type="Script" path="res://grapple.gd" id="3_mhyeh"]
[ext_resource type="Texture2D" uid="uid://dluhf32xosvfe" path="res://jump_and_fall_ (1).png" id="3_nf1p1"]
[ext_resource type="Script" path="res://label.gd" id="4_g3nkr"]
[ext_resource type="Texture2D" uid="uid://n88f7tkm3jow" path="res://run-Sheet.png" id="4_gch6q"]
[ext_resource type="Script" path="res://label_3.gd" id="5_8j2b2"]
[ext_resource type="Texture2D" uid="uid://cb43qadyt105d" path="res://swing_sprites.png" id="5_76hex"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cytsk"]
atlas = ExtResource("2_vj5d7")
region = Rect2(4, 0, 45, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iegw"]
atlas = ExtResource("3_nf1p1")
region = Rect2(81, 0, 33, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_syy2b"]
atlas = ExtResource("2_wswbc")
region = Rect2(21, 0, 21, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_futgj"]
atlas = ExtResource("2_wswbc")
region = Rect2(84, 0, 21, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygfft"]
atlas = ExtResource("2_wswbc")
region = Rect2(147, 0, 21, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_77suw"]
atlas = ExtResource("5_76hex")
region = Rect2(64, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwua6"]
atlas = ExtResource("5_76hex")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dawa"]
atlas = ExtResource("5_76hex")
region = Rect2(0, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir2rf"]
atlas = ExtResource("5_76hex")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivdeb"]
atlas = ExtResource("5_76hex")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8ng"]
atlas = ExtResource("5_76hex")
region = Rect2(140, 48, 35, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie04"]
atlas = ExtResource("4_gch6q")
region = Rect2(0, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkop"]
atlas = ExtResource("4_gch6q")
region = Rect2(64, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_btg8h"]
atlas = ExtResource("4_gch6q")
region = Rect2(128, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_4draw"]
atlas = ExtResource("4_gch6q")
region = Rect2(192, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7yge"]
atlas = ExtResource("4_gch6q")
region = Rect2(256, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_orl7k"]
atlas = ExtResource("4_gch6q")
region = Rect2(320, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb4ip"]
atlas = ExtResource("4_gch6q")
region = Rect2(384, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uf0j"]
atlas = ExtResource("4_gch6q")
region = Rect2(448, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xq73"]
atlas = ExtResource("5_76hex")
region = Rect2(192, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw7bp"]
atlas = ExtResource("5_76hex")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjym8"]
atlas = ExtResource("5_76hex")
region = Rect2(256, 48, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vp328"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cytsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iegw")
}],
"loop": true,
"name": &"dash",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_syy2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_futgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygfft")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77suw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwua6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dawa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir2rf")
}],
"loop": false,
"name": &"fall",
"speed": 11.47
}, {
"frames": [{
"duration": 1.98,
"texture": SubResource("AtlasTexture_ivdeb")
}],
"loop": true,
"name": &"grapple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8ng")
}],
"loop": true,
"name": &"jumppad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bkop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btg8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4draw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7yge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orl7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb4ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uf0j")
}],
"loop": true,
"name": &"run",
"speed": 14.4
}, {
"frames": [{
"duration": 1.98,
"texture": SubResource("AtlasTexture_ivdeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xq73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw7bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjym8")
}],
"loop": false,
"name": &"swing",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ify4q"]
size = Vector2(43.1033, 111.765)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_uohpn"]
points = PackedVector2Array(30, 0, 130, -50, 130, 50)

[sub_resource type="Curve" id="Curve_3tdyn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_ba6un"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uou6p"]
size = Vector2(43.1034, 111.765)

[sub_resource type="Curve" id="Curve_jgqo2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 1
position = Vector2(1725, 487)
scale = Vector2(1.16, 1.36)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_o5ldr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.00543e-05, -1.09673e-05)
scale = Vector2(2.82813, 2.44118)
sprite_frames = SubResource("SpriteFrames_vp328")
animation = &"grapple"

[node name="Marker2D" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(6.40121, -9.33733)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.73526)
shape = SubResource("RectangleShape2D_ify4q")

[node name="grapple" type="Node2D" parent="."]
position = Vector2(18.1035, -22.7941)
script = ExtResource("3_mhyeh")

[node name="ShapeCast2D" type="ShapeCast2D" parent="grapple"]
position = Vector2(-6.03467, 0)
shape = SubResource("ConvexPolygonShape2D_uohpn")
target_position = Vector2(800, 0)
max_results = 1
collision_mask = 2

[node name="RayCast2D" type="RayCast2D" parent="grapple"]
enabled = false
target_position = Vector2(400, 0)
collision_mask = 2

[node name="Line2D" type="Line2D" parent="grapple"]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0
width_curve = SubResource("Curve_3tdyn")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(0.07, 0.07, 0.07, 1)
z_index = -5
offset_left = -7811.0
offset_top = -5860.0
offset_right = 9066.0
offset_bottom = 4007.0
texture = SubResource("CanvasTexture_ba6un")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.735291)
shape = SubResource("RectangleShape2D_uou6p")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 8.62073
offset_top = -222.794
offset_right = 299.621
offset_bottom = -126.794
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_g3nkr")

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 206.034
offset_top = 110.294
offset_right = 465.035
offset_bottom = 193.294
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_8j2b2")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-24.1379, 24.2647)
scale = Vector2(0.862069, 0.735294)
amount = 200
lifetime = 1.6
speed_scale = 10.0
randomness = 0.67
direction = Vector2(-1, 0)
spread = 22.5
gravity = Vector2(0, 0)
initial_velocity_min = 76.92
initial_velocity_max = 211.54
scale_amount_min = 0.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-24.1379, 2.20589)
scale = Vector2(0.862069, 0.735294)
emitting = false
amount = 200
lifetime = 1.6
one_shot = true
speed_scale = 10.0
randomness = 0.67
direction = Vector2(-1, 0)
spread = 75.0
gravity = Vector2(0, 0)
initial_velocity_min = 76.92
initial_velocity_max = 211.54
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_jgqo2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Cooldown" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
